# Lectures

./: .gitignore
CodingTheory2020/: ConcatenatedCode_example.sage  Exercises.txt  HW2.txt  ReedSolomonGenerator.sage
CodingTheory2021/: BCH_example.sage  ConcatenatedCode_example.sage  DM1.tex  DM2.tex  DM3.tex  DM4.tex  DM_additional.tex  GoppaCode_example.sage  HW2.txt  ReedMuller.sage  ReedSolomonGenerator.sage  ReedSolomonGenerator_primefield.sage  ReedSolomon_WB_solutions.txt  ReedSolomon_list_decoding.sage  TD1.tex  TD10.tex  TD12.tex  TD13.tex  TD14.tex  TD2.tex  TD3.tex  TD4.tex  TD5.tex  TD6.tex  TD7.tex  TD9.tex  exam_tasks.sage  klausur_2021.tex
CodingTheory2022/: ConcatenatedCode_example.sage  ConcatenatedCode_small_example.sage  DM_add.tex  TD10.tex  TD11.tex  TD12.tex  TD14.tex  TD7.tex  TD8.tex  TD9.tex  klausur_2022.tex
CodingTheory2023/: DM1.tex  DM4.tex  GoppaCode_example.sage  RS_list_decoding_solutions.txt  RS_list_decoding_solutions_backup.txt  ReedSolomon_list_decoding.sage  SyndromDecoding.sage  TD1.tex  TD2.tex  TD3.tex  TD4.tex  TD8.tex  solutions.txt
Crypto101/: Farewell.tex  Intro.tex  PerfectSecrecy_PRG.tex  PerfectSecrecy_PRG_part_II.tex  PerfectSecrecy_PRG_part_III.tex
EllipticCurves2019/: TP1.tex  TP2.tex  TP3.tex  TP3_tests.txt  TP4.tex  TP5.tex  TP6.tex  TP7.tex  TP8.tex  ЗамечаниеЛек1.txt
EllipticCurves2020/: beamerthemeec2020.sty  biblio.bib
EllipticCurves2021/: beamerthemeec2020.sty  biblio.bib
EllipticCurves2022/: beamerthemeec2020.sty  biblio.bib
EllipticCurves2025/: biblio.bib  (+1 more)
InfoSec2021/Labs/lab1/: CMakeLists.txt
(+388 files in other folders)
